Name:          hcasadi
Version:       0.1
License:       AllRightsReserved
--License-file:
Copyright:     (c) Greg Horn 2011,
Author:        Greg Horn
Maintainer:    gregmainland@gmail.com
Stability:     Experimental
Category:      Math
Build-type:    Simple
Cabal-version: >=1.2
synopsis:      Wrapper for CasADi C++ Automatic Differentiation libraries
--description:   TODO

Library
  Exposed-modules:
    Casadi
    Casadi.DMatrix
    Casadi.SX
    Casadi.SXMatrix
    Casadi.SXFunction
    Casadi.Utils
    Casadi.Api

  Other-modules:
    Casadi.Matrix
    Casadi.SXFunctionRaw
    Casadi.CasadiInterfaceUtils

  Build-depends: base, time, hmatrix, deepseq, process
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         

  Extra-lib-dirs:  /home/greg/hcasadi/hcasadi_cppsrc, /home/greg/casadi/build/lib

  Extra-libraries: casadi_interface, casadi

  Ghc-options: -pgml g++ -O2 -dno-debug-output
  --HS_PROFILE_FLAGS = -prof -auto-all -caf-all -fforce-recomp -rtsopts


--Executable ipoptTest
--  Main-Is:         ipoptTest.hs
--  Hs-Source-Dirs:  .
--  Other-Modules:
--  Build-depends:
--  Ghc-options:     -pgml g++ -dno-debug-output -O2
--
--  Extra-lib-dirs:
--        /home/greg/hopt-o-mex/hcasadi_cppsrc
--        /home/greg/casadi/build/lib
--        /usr/local/lib/coin
--        /usr/local/lib/coin/ThirdParty
--        /home/greg/snopt7/lib
--
--  Extra-libraries:
--        casadi_interface
--        coinhsl
--        coinmumps
--        coinmetis
--        ipopt
--        ipopt_interface
--        csparse_interface
--        optimal_control
--        superlu_interface
--        casadi
--        csparse
--        gsl_interface
--        lapack_interface
--        superlu
--        tinyxml
--        snopt
--        snopt_c
--        snopt_cpp
--        snprint
--        snprint_c
--        snoptblas
--        snoptblas_c
--        HSrtsmain
--        f2c

