Name:          hopt-o-mex
Version:       0.1
License:       AllRightsReserved
--License-file:
Copyright:     (c) Greg Horn 2011,
Author:        Greg Horn
Maintainer:    gregmainland@gmail.com
Stability:     Experimental
Category:      Math
Build-type:    Simple
Cabal-version: >=1.2
--synopsis:      Wrapper for CasADi C++ Automatic Differentiation libraries
--description:   TODO

Library
  Exposed-modules:
    Casadi
    Casadi.SX
    Casadi.SXMatrix
    Casadi.SXFunction
    Casadi.Utils
  
  Other-modules:
        Casadi.CasadiInterfaceUtils

  Build-depends: base, hmatrix
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         

  Extra-lib-dirs:  /home/greg/hopt-o-mex/hcasadi_cppsrc, /home/greg/casadi/build/lib

  Extra-libraries: casadi_interface, casadi

  Ghc-options: -pgml g++ -fPIC -O2 -dno-debug-output
  --HS_PROFILE_FLAGS = -prof -auto-all -caf-all -fforce-recomp -rtsopts

Executable speedTest
  Main-Is:         speedTest.hs
  Hs-Source-Dirs:  .
  Other-Modules:   Hom, Ddp, Casadi, DdpCasadi
  Build-depends:   ad, hmatrix
  Ghc-options:     -pgml g++ -dno-debug-output -fPIC -O2

  Extra-lib-dirs:  /home/greg/hopt-o-mex/hcasadi_cppsrc, /home/greg/casadi/build/lib
  Extra-libraries: casadi_interface, casadi

Executable springDdp
  Main-Is:         springDdp.hs
  Hs-Source-Dirs:  .
  Other-Modules:   Hom, Ddp, Casadi
  Build-depends:   ad, hmatrix, gnuplot
  Ghc-options: -O2 -dno-debug-output

  Extra-lib-dirs:  /home/greg/hopt-o-mex/hcasadi_cppsrc, /home/greg/casadi/build/lib
  Extra-libraries: casadi_interface, casadi

Executable cartpoleDdpAD
  Main-Is:         cartpoleDdpAD.hs
  Hs-Source-Dirs:  .
  Other-Modules:   Hom, Ddp
  Build-depends:   ad, hmatrix, time, GLUT, containers, deepseq, unix
  Ghc-options: -threaded -O2 -dno-debug-output

Executable cartpoleDdp
  Main-Is:         cartpoleDdp.hs
  Hs-Source-Dirs:  .
  Other-Modules:   Hom, Ddp, Casadi
  Build-depends:   hmatrix, time, GLUT, containers, deepseq, unix
  Ghc-options: -threaded -O2 -dno-debug-output

  Extra-lib-dirs:  /home/greg/hopt-o-mex/hcasadi_cppsrc, /home/greg/casadi/build/lib
  Extra-libraries: casadi_interface, casadi


Executable optTest
  Main-Is:         preliminaryOptimization.hs
  Hs-Source-Dirs:  .
  Other-Modules:   Casadi
  Build-depends:   hmatrix, gnuplot
  Ghc-options:     -pgml g++ -dno-debug-output -fPIC -O2

  Extra-lib-dirs:  /home/greg/hopt-o-mex/hcasadi_cppsrc, /home/greg/casadi/build/lib
  Extra-libraries: casadi_interface, casadi
