Name:          hopt-o-mex
Version:       0.1
License:       AllRightsReserved
--License-file:
Copyright:     (c) Greg Horn 2011,
Author:        Greg Horn
Maintainer:    gregmainland@gmail.com
Stability:     Experimental
Category:      Math
Build-type:    Simple
Cabal-version: >=1.2
--synopsis:      Wrapper for CasADi C++ Automatic Differentiation libraries
--description:   TODO

Library
  Exposed-modules:
    Casadi
    Casadi.DMatrix
    Casadi.SX
    Casadi.SXMatrix
    Casadi.SXFunction
    Casadi.Utils
    Casadi.Api

    Optimization
    Optimization.LineSearch
    Optimization.QuasiNewton
  
  Other-modules:
    Casadi.CasadiInterfaceUtils

  Build-depends: base, hmatrix
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         

  Extra-lib-dirs:  /home/greg/hopt-o-mex/hcasadi_cppsrc, /home/greg/casadi/build/lib

  Extra-libraries: casadi_interface, casadi

  Ghc-options: -pgml g++ -O2 -dno-debug-output
  --HS_PROFILE_FLAGS = -prof -auto-all -caf-all -fforce-recomp -rtsopts


Executable springDdp
  Main-Is:         springDdp.hs
  Hs-Source-Dirs:  .
  Other-Modules:
  Build-depends:   hmatrix, gnuplot
  Ghc-options: -O2 -dno-debug-output

  Extra-lib-dirs:  /home/greg/hopt-o-mex/hcasadi_cppsrc, /home/greg/casadi/build/lib
  Extra-libraries: casadi_interface, casadi

Executable cartpoleDdp
  Main-Is:         cartpoleDdp.hs
  Hs-Source-Dirs:  .
  Other-Modules:
  Build-depends:   hmatrix, time, GLUT, containers, deepseq, unix
  Ghc-options:     -threaded -O2 -pgml g++ -dno-debug-output
--  Ghc-options:     -threaded -O2 -pgml g++ -dno-debug-output -auto-all -caf-all -fforce-recomp -rtsopts

  Extra-lib-dirs:  /home/greg/hopt-o-mex/hcasadi_cppsrc, /home/greg/casadi/build/lib
  Extra-libraries: casadi_interface, casadi

Executable doubleCartpoleDdp
  Main-Is:         doubleCartpoleDdp.hs
  Hs-Source-Dirs:  .
  Other-Modules:
  Build-depends:   hmatrix, time, GLUT, containers, deepseq, unix
  Ghc-options:     -threaded -O2 -pgml g++ -dno-debug-output
--  Ghc-options:     -threaded -O2 -pgml g++ -dno-debug-output -auto-all -caf-all -fforce-recomp -rtsopts

  Extra-lib-dirs:  /home/greg/hopt-o-mex/hcasadi_cppsrc, /home/greg/casadi/build/lib
  Extra-libraries: casadi_interface, casadi

Executable optTest
  Main-Is:         optTest.hs
  Hs-Source-Dirs:  .
  Other-Modules:   Casadi, Optimization
  Build-depends:   hmatrix, gnuplot
  Ghc-options:     -pgml g++ -dno-debug-output -O2

  Extra-lib-dirs:  /home/greg/hopt-o-mex/hcasadi_cppsrc, /home/greg/casadi/build/lib
  Extra-libraries: casadi_interface, casadi

Executable ipoptTest
  Main-Is:         ipoptTest.hs
  Hs-Source-Dirs:  .
  Other-Modules:
  Build-depends:
  Ghc-options:     -pgml g++ -dno-debug-output -O2

  Extra-lib-dirs:
        /home/greg/hopt-o-mex/hcasadi_cppsrc
        /home/greg/casadi/build/lib
        /usr/local/lib/coin
        /usr/local/lib/coin/ThirdParty
        /home/greg/snopt7/lib

  Extra-libraries:
        casadi_interface
        coinhsl
        coinmumps
        coinmetis
        ipopt
        ipopt_interface
        csparse_interface
        optimal_control
        superlu_interface
        casadi
        csparse
        gsl_interface
        lapack_interface
        superlu
        tinyxml
        snopt
        snopt_c
        snopt_cpp
        snprint
        snprint_c
        snoptblas
        snoptblas_c
        HSrtsmain
        f2c

Executable cartpoleMs
  Main-Is:         cartpoleMs.hs
  Hs-Source-Dirs:  .
  Other-Modules:   Casadi
  Build-depends:
  Ghc-options:     -threaded -pgml g++ -dno-debug-output -O2
--  Ghc-options:     -O2 -threaded -pgml g++ -dno-debug-output -auto-all -caf-all -fforce-recomp -rtsopts

  Extra-lib-dirs:
        /home/greg/hopt-o-mex/hcasadi_cppsrc
        /home/greg/casadi/build/lib
        /usr/local/lib/coin
        /usr/local/lib/coin/ThirdParty
        /home/greg/snopt7/lib

  Extra-libraries:
        casadi_interface
        coinhsl
        coinmumps
        coinmetis
        ipopt
        ipopt_interface
        csparse_interface
        optimal_control
        superlu_interface
        casadi
        csparse
        gsl_interface
        lapack_interface
        superlu
        tinyxml
        snopt
        snopt_c
        snopt_cpp
        snprint
        snprint_c
        snoptblas
        snoptblas_c
        HSrtsmain
        f2c

Executable doubleCartpoleMs
  Main-Is:         doubleCartpoleMs.hs
  Hs-Source-Dirs:  .
  Other-Modules:   Casadi
  Build-depends:
  Ghc-options:     -threaded -pgml g++ -dno-debug-output -O2
--  Ghc-options:     -O2 -threaded -pgml g++ -dno-debug-output -auto-all -caf-all -fforce-recomp -rtsopts

  Extra-lib-dirs:
        /home/greg/hopt-o-mex/hcasadi_cppsrc
        /home/greg/casadi/build/lib
        /usr/local/lib/coin
        /usr/local/lib/coin/ThirdParty
        /home/greg/snopt7/lib

  Extra-libraries:
        casadi_interface
        coinhsl
        coinmumps
        coinmetis
        ipopt
        ipopt_interface
        csparse_interface
        optimal_control
        superlu_interface
        casadi
        csparse
        gsl_interface
        lapack_interface
        superlu
        tinyxml
        snopt
        snopt_c
        snopt_cpp
        snprint
        snprint_c
        snoptblas
        snoptblas_c
        HSrtsmain
        f2c
