Name:          hcasadi-bindings
Version:       0.1
License:       AllRightsReserved
--License-file:
Copyright:     (c) Greg Horn 2011-2012
Author:        Greg Horn
Maintainer:    gregmainland@gmail.com
Stability:     Experimental
Category:      Math
Build-type:    Simple
Cabal-version: >=1.8
synopsis:      Raw bindings to CasADi C++ Automatic Differentiation libraries
--description:   TODO

Extra-source-files: cbits

Library
  Exposed-modules:  Casadi.Bindings.Math
                    Casadi.Bindings.SXM
                    Casadi.Bindings.SXFunction

  Build-depends: base >= 4 && < 5
  
--  pkgconfig-depends:   casadi
  Extra-libraries: casadi
                   stdc++
  Extra-lib-dirs:  
                   /home/ghorn/casadi/distribute-static/lib
--                   /home/ghorn/casadi/distribute-shared/lib
--                   /usr/local/lib
  Include-dirs: 
--                cbits
                /home/ghorn/casadi/distribute-static/include/casadi
--                /home/ghorn/casadi/distribute-shared/include/casadi
--                /usr/local/include/casadi
--  Ghc-options: -pgml g++

  C-sources:         cbits/sxm.cpp
                     cbits/sxmMath.cpp
                     cbits/sxFunction.cpp

  Install-includes:  cbits/sxm.hpp
                     cbits/sxmMath.hpp
                     cbits/sxFunction.hpp

