Name:          hcasadi-bindings
Version:       0.1
License:       AllRightsReserved
--License-file:
Copyright:     (c) Greg Horn 2011-2012
Author:        Greg Horn
Maintainer:    gregmainland@gmail.com
Stability:     Experimental
Category:      Math
Build-type:    Simple
Cabal-version: >=1.8
synopsis:      Raw bindings to CasADi C++ Automatic Differentiation libraries
--description:   TODO

Extra-source-files: cbits

Library
  Exposed-modules:  Casadi.Bindings.Integrator
                    Casadi.Bindings.Math
                    Casadi.Bindings.NLPSolver
                    Casadi.Bindings.SXM
                    Casadi.Bindings.SXFunction

  Build-depends: base >= 4 && < 5
  
--  pkgconfig-depends:   casadi
  Extra-libraries:
                   -- casadi stuff:
                   integration
                   casadi
--                   csparse
--                   csparse_interface
                   ipopt_interface
                   sundials_interface
                   -- ipopt stuff:
                   ipopt
                   lapack
                   dl
                   coinmumps
                   pthread
                   coinhsl
                   blas
                   gfortran
                   m
                   gcc_s
                   quadmath
                   coinmetis  
                   stdc++
                   m
                   -- sundials stuff:
--                   sundials_cvode
                   sundials_fkinsol
                   sundials_idas
                   sundials_cvodes
                   sundials_fnvecparallel
                   sundials_kinsol
                   sundials_fcvode
                   sundials_fnvecserial
                   sundials_nvecparallel
                   sundials_fida
--                   sundials_ida
                   sundials_nvecserial

  Extra-lib-dirs:  
--                   /home/ghorn/casadi/deploy-static/lib
                   /home/ghorn/casadi/deploy-shared/lib
--                   /usr/local/lib
--                   /home/ghorn/CoinIpopt/deploy-static/lib
                   /home/ghorn/CoinIpopt/deploy-shared/lib
                   /home/ghorn/sundials-2.5.0/distribute/lib
  Include-dirs: 
--                cbits
--                /home/ghorn/casadi/deploy-static/include/casadi
                /home/ghorn/casadi/deploy-shared/include/casadi
--                /usr/local/include/casadi
--  Ghc-options: -pgml g++
--  cc-options: -Wall -Wextra

  C-sources:         cbits/integrator.cpp
                     cbits/nlp.cpp
                     cbits/sxm.cpp
                     cbits/sxmMath.cpp
                     cbits/sxFunction.cpp

  Install-includes:  cbits/integrator.hpp
                     cbits/nlp.hpp
                     cbits/sxm.hpp
                     cbits/sxmMath.hpp
                     cbits/sxFunction.hpp
