Name:          hcasadi
Version:       0.1
License:       AllRightsReserved
--License-file:
Copyright:     (c) Greg Horn 2011-2012
Author:        Greg Horn
Maintainer:    gregmainland@gmail.com
Stability:     Experimental
Category:      Math
Build-type:    Simple
Cabal-version: >=1.8
synopsis:      Wrapper for CasADi C++ Automatic Differentiation libraries
--description:   TODO

Library
  Exposed-modules:
    Casadi.SXM
    Casadi.Math
    Casadi.NLPSolver
    Casadi.NLPSolverOptions
    Casadi.SXFunction
    Casadi.SXFunctionOptions
    Casadi.Types

  Other-modules:
    Casadi.WithForeignPtrs
    Casadi.Options
    Casadi.NLPSolverOptionsInternal
    Casadi.SXFunctionOptionsInternal

  Build-depends: base >= 4 && < 5,
                 hcasadi-bindings,
                 vector
-- time, hmatrix, deepseq, process
  
