Name:          hcasadi
Version:       0.1
License:       AllRightsReserved
--License-file:
Copyright:     (c) Greg Horn 2011-2012
Author:        Greg Horn
Maintainer:    gregmainland@gmail.com
Stability:     Experimental
Category:      Math
Build-type:    Simple
Cabal-version: >=1.8
synopsis:      Wrapper for CasADi C++ Automatic Differentiation libraries
--description:   TODO

Library
  Exposed-modules:
    Casadi.DAE
    Casadi.Dvda
    Casadi.Integrator
    Casadi.IdasOptions
    Casadi.CvodesOptions
    Casadi.Math
    Casadi.NLPSolver
    Casadi.NLPSolverOptions
    Casadi.SXFunction
    Casadi.SXFunctionOptions
    Casadi.SXM

  Other-modules:
    Casadi.IntegratorOptionsInternal
    Casadi.NLPSolverOptionsInternal
    Casadi.Options
    Casadi.SXFunctionOptionsInternal
    Casadi.Types
    Casadi.WithForeignPtrs

  Build-depends: base >= 4 && < 5,
                 containers,
                 transformers,
                 vector,
                 dvda,
                 hcasadi-bindings
-- time, hmatrix, deepseq, process
  
